--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="kutija">
         <div class="upper">
             <div>
-                <p>Search for Pokémon Name:</p>
+                <p>Search for Pokémon Name or ID:</p>
             </div>
 
             <form id="search-form">
