--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
                 <p class="height" id="height"></p>
             </div>
 
-            <div id="sprite-container" class="sprite-container">
-            </div>
+            <div id="sprite-container" class="sprite-container"></div>
+
+            <div id="type" class="typ"></div>
         </div>
 
         <div class="info">
